www/styles/main.css
body {
  padding-bottom: 40px;
}

h1, h2, h3, h4, h5, h6 {
  margin-bottom: 0;
  line-height: normal;
}

h2.day-title {
  line-height: 35px;
}

h1.big { font-size: 38.25px;}
h1 { font-size: 29.75px;}
h2 { font-size: 21.25px;}
h3 { font-size: 17px;}
h4 { font-size: 14.45px; }

.btn:hover, a.not-decorated, .whithout-decoration a {
  text-decoration: none;
}

.row-fluid input + button[class*="span"] {
    float: none;           /* Remove the */
    display: inline-block; /* floating   */
    margin-left: 0;        /* Stick it to the left */
}

.hero-unit {
  margin-top: -10px;
}

.tooltip-inner {
  max-width: 250px !important;
}


.navbar-static-top {
  margin-bottom: 10px;
}

.container-narrow {
  margin: 0 auto;
  max-width: 760px;
}

.container-narrow > hr {
  margin: 30px 0;
}

.with-box-shadow {
    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
    box-shadow: 0 1px 1px rgba(0,0,0,0.15);
}

.with-shadow {
    color: rgba(70,70,70,0.6);
}

.text-center {
  text-align: center;
}

.day-info {
  font-size: 0.8em;
  margin-bottom: 0;
  margin-top: 15px;
}

.day-preview-alert {
  margin-top: 20px;
}

.day-bages {
  /*font-size: 0.7em;*/
}

.friend img {
  -webkit-border-bottom-left-radius: 0;
  -webkit-border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.friend button {
  -webkit-border-top-left-radius: 0;
  -webkit-border-top-right-radius: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.timepicker {
  margin-bottom: 5px;
}

.popover button {
  margin-top: 8px;
  width: 160px;
}

.popover h5:first-child {
  margin-top: 0px;
}

.btn-file {
  position: relative;
  overflow: hidden;
  vertical-align: middle;
}

.btn-file > input {
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  font-size: 23px;
  cursor: pointer;
  opacity: 0;
  filter: alpha(opacity=0);
  transform: translate(-300px, 0) scale(4);
  direction: ltr;
}

.add-on-small {
  padding: 2px 7px !important;
  height: 26px !important;
  font-size: 14.45px !important;
}

input[subtype=date] {
  width: 80px;
}

input[subtype=time] {
  width: 40px;
}

.icon-heart,
.icon-heart-empty {
  color: #980000;
}

.alert-small {
  color: #980000;
}

/** days list */
.days {
    list-style: none;
    margin:0;
}
.days::after {
    clear: both;
}

.days li {
    float:left;
}

.days dl {
    position: relative;
    margin: 11px 11px 0 0;
}

.days dt {
    width:250px;
    height:250px;
    overflow:hidden;
}

.days dl dt img  {
    display: block;
}
.days dl dd {
    position: absolute;
    left: 0em;
    bottom: 0em;
    right: 0em;
    background: rgba(0, 0, 0, 0.6);
    margin:0;
}

.days dd a {
    color:#fff;
    font-weight:lighter;
}
.days dd a:hover {
    color:rgb(156, 0, 1);
    text-decoration: none;
    font-weight:lighter;
}

.days dl dd div {
    display: block; float: left; clear: both;
    padding: 0.2em 0.5em; color: #fff;
}

.days li .day-controls-overlay-left, .days .day-controls-overlay-right {
  top: 5px;
  position: absolute;
  background: rgba(0, 0, 0, 0.3);
  padding: 1px 5px;
  font-weight: lighter;
  color:#ccc;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;

  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  -ms-transition: all 0.4s ease;
  -o-transition: all 0.4s ease;
  transform: all 0.4s ease;

  -webkit-opacity: 0;
  -moz-opacity: 0;
  opacity: 0;
}

.days li:hover .day-controls-overlay-left, .days li:hover .day-controls-overlay-right {
  -webkit-opacity: 1;
  -moz-opacity: 1;
  opacity: 1;
}

.days .day-controls-overlay-left {
    left: 5px;
}

.days .day-controls-overlay-right {
    right: 5px;
}

/** users list */
.users .row {
    background-color:#fff;
    margin-bottom:10px;
    height:72px;
    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
    box-shadow: 0 1px 1px rgba(0,0,0,0.15);
}
.users .left {
    float:left;
    width:72px;
}
.users .left a {
    float:left;
}
.users .left img {
    width:72px;
    height:72px;
}
.users .middle {
    float:left;
    width:250px;
    padding: 10px 10px 10px 20px;
}
.users .middle small {
    color:#999;
}
.users .right {
    float:right;
}

.follow-action, .unfollow-action {
    margin:17px 10px 0 0;
}
/** /users list */

.day-user-actions {
  height: 45px;
}

.day-controls a {
  margin-left: 10px;
}

.day-controls-group .row {
  margin-left: 0;
  margin-right: 0;
}

.moment-item {
  position: relative;
}

.moment-item img {
  max-width: 100%;
}

.error {
  border-color:#ab0001;
}

.success {
  border-color:rgb(30, 168, 77) !important;
}

.info {
  /*border-color: #49afcd;*/
  border-style: dashed;
}

.moment-item-placeholder {
  text-align: center;
  border-style: dashed;

  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  -ms-transition: all 0.4s ease;
  -o-transition: all 0.4s ease;
  transform: all 0.4s ease;
}

.moment-item-placeholder i {
  vertical-align:middle
}

.moment-item-placeholder .message {
  position: relative;
}

.moment-item-hidden {
  background: #ffeeee;
}

.moment-controls-overlay {
  top:5px;
  right: 5px;
  position: absolute;
}

.moment-controls-overlay a {
  padding: 0px;
}

.moment-time {
  margin-bottom: 5px;
}

.moment-image-holder {
  position: relative;
  clear: both;
  max-width: 100%;
  width: 420px;
  font-size: 1em;
  margin-left: auto;
  margin-right: auto;
}

.user-image-holder,
.img-wrap {
  position: relative;
  clear: both;
  width: 192px;
}

.moment-image-holder img {
  max-width: 100%;
  width: 420px;
}

.moment-image-holder a,
.user-image-holder a {
  color: #FFF;
}

.moment-image-overlay,
.user-image-overlay {
  position: absolute;
  color:#FFF;
  border-radius: 4px;
  background: rgba(0, 0, 0, 0.7);
  padding: 2px 6px 2px 2px;
  vertical-align: middle;
  text-align: center;
  font-weight: bold;
}

.user-image-overlay {
  bottom: 5px;
  right: 5px;
}

.moment-upload-progress {
  position: absolute;
  right: 35px;
  left: 35px;
  top: 200px;
}

.moment-upload-progress .progress {
  background: rgba(0, 0, 0, 0.7);
  height: 10px;
}

.moment-upload-progress .progress .bar {
  background-color: #CCC;
}

.overlay-like {
  bottom:5px;
  right: 5px;
}

.moment-description {
  max-width: 100%;
  width: 420px;
  margin-left: auto;
  margin-right: auto;
}

.final-description {
  /*background-color: #fcf8e3;*/
}

.comment-item {
  margin-top: 20px;
  clear: both;
}

.comment-item .text {
  overflow: hidden;
}

.comment-item .bubble {
  padding-bottom: 1px;
}

.comment-item img {
  margin-right: 20px;
}

.comment-item .bubble,
.comments-loader {
  margin-left: 100px;
}

.comments-loader {
  clear: both;
  margin-top: 10px;
  margin-bottom: 15px;
}

/* Speech bubbles */
.bubble {
  position:relative;
  padding:15px;
  /*margin:5px 0 0.5em;*/
  color:#333;
  background:#eee;
  /* css3 */
  -webkit-border-radius:10px;
  -moz-border-radius:10px;
  border-radius:10px;
}

.moment-description p {font-size:28px; line-height:1.25em;}

/* creates the triangle */
.bubble:after {
  content:"";
  position:absolute;
  top:-30px;
  left:50px;
  border:15px solid transparent;
  border-bottom-color:#eee;
    /* reduce the damage in FF3.0 */
    display:block;
    width:0;
}

.bubble small {
  margin-top: 10px;
  display: block;
  line-height: 20px;
  color: #999999;
}

.bubble small a {
  color: rgb(153, 153, 153);
}

.bubble small:before {
  content: '\2014 \00A0';
}

.input-append .btn {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.input-prepend .btn {
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.input-append, .input-prepend {
  margin-bottom: 0;
}

/* creates the smaller  triangle */
.bubble.left:after {
  top:16px; /* value = (:before top) + (:before border-top) - (:after border-top) */
  bottom:auto;
  left:-21px; /* value = - border-left-width - border-right-width */
  border-width:9px 21px 9px 0;
  border-color:transparent #eee;
}

/* display of quote author (alternatively use a class on the element following the blockquote) */
.bubble + p {padding-left:15px; font:14px Arial, sans-serif;}

ul.inline >li:last-child,
ol.inline >li:last-child {
  padding-right: 0;
}

ul.inline >li:first-child,
ol.inline >li:first-child {
  padding-left: 0;
}

.show-on-mobile {
  display:none;
}

.thumbnails .thumbnail .bage-bottom-right {
  bottom: 0px;
  right: 3px;
  position: absolute;
  vertical-align: middle;
  text-align: center;
  font-weight: bold;
  opacity: 0;

  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  -ms-transition: all 0.4s ease;
  -o-transition: all 0.4s ease;
  transform: all 0.4s ease;
}

.modal-footer .btn {
  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  -ms-transition: all 0.4s ease;
  -o-transition: all 0.4s ease;
  transform: all 0.4s ease;
}

.thumbnails .thumbnail.selected .bage-bottom-right {
  opacity: 1;
  color:rgb(30, 168, 77);
}

.modal-body .thumbnails {
  margin-left: -15px;
}

.import-modal .thumbnails .thumbnail img {
  opacity: 1;

  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  -ms-transition: all 0.4s ease;
  -o-transition: all 0.4s ease;
  transform: all 0.4s ease;
}

.thumbnails .thumbnail.selected img {
  opacity: 0.4;
}

.import-modal .thumbnails .thumbnail,
.import-modal .thumbnails .thumbnail .img-wrap {
  width: 150px;
  height: 150px;
}

.import-modal .thumbnails > li {
  margin-left: 20px !important;
}

/* Responsive */
@media (min-width: 500px) {
  .mobile-nav {
    display: none;
  }

  .row {
    margin-left: 20px;
    margin-right: 20px;
  }
}

@media (max-width: 500px) {
  .comment-item img {
    width: 36px;
  }

  .days dt {
    width:278px;
    height:278px;
  }

  .day-date {
    display: block;
    float: none !important;
  }

  .hidden-on-mobile {
    display:none !important;
  }

  .show-on-mobile {
    display:block !important;
  }

  ul.inline >li,
  ol.inline >li {
    padding-left: 3px;
    padding-right: 3px;
  }

  .comment-item .bubble {
    margin-left: 50px;
  }

  .moment-description {
    width: 210px;
  }

  .moment-image-holder,
  .moment-image-holder img {
    width: 230px;
    margin-left: 0;
    margin-right: 0;
  }
}

